--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,13 @@
     <string name="welcome">Welcome to Activity Two (hit the back button to end)</string>
     <string name="close">Close Activity</string>
     <string name="rotateMe">Rotate the device to update the counters</string>
-
+    <string name="createCounter">0</string>
+    <string name="startCounter">0</string>
+    <string name="resumeCounter">0</string>
+    <string name="pauseCounter">0</string>
+    <string name="stopCounter">0</string>
+    <string name="destroyCounter">0</string>
+    <string name="restartCounter">0</string>
     <string name="m_1">Menu Item 1</string>
     <string name="m_2">Menu Item 2</string>
 
